# innova-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.eval.yml  docker-compose.yml  main.py  pyproject.toml  repomix-output.xml
Diagrams/: Sequence_happypath.puml
app/: di.py  domain.py  exceptions.py  main.py
app/channel/: telegram_bot.py
app/client/: ag2_agent_client.py  crm_client.py  delivery_factory.py  embedding_client.py  llm_client.py  openrouter_client.py  queue_client.py  vector_client.py
app/core/: di.py  schemas.py
app/db/: base.py  session.py
app/gateway/: llm_client.py
app/models/: __init__.py  dialog_session_model.py  knowledge_model.py  lead_model.py  message_model.py  user_model.py
app/repository/: __init__.py  dialog_session_repository.py  knowledge_repository.py  lead_repository.py  message_repository.py  user_repository.py
app/router/: knowledge_router.py  lead_router.py  message.py  message_router.py  session_router.py
app/schemas/: __init__.py  agent_message.py  agent_schema.py  knowledge_schema.py  lead_delivery_schema.py  lead_schema.py  message.py  openai.py  session_schema.py
app/service/: agent_service.py  business.py  business_service.py  knowledge_ingestion_service.py  knowledge_retrieval_service.py  lead_delivery_service.py  lead_service.py  message.py  message_service.py  session_service.py  state_machine.py
app/worker/: lead_delivery.py
demo/: widget-demo.html
docs/: MVP_ROADMAP.md  System_Design.md  innova_ai_prd_full.md
docs/RAG/: golden_dataset.json  Данные для RAG.txt
docs/diagrams/: Components.puml  DataBase.puml  ER.plantuml  Sequence.puml  current_sequenes.puml
evals/: README.md  __init__.py  schema.py
evals/runners/: __init__.py  evaluate.py  run.py
migrations/: env.py
migrations/versions/: 21a80ea32600_fk_ondelete_restrict.py  412db7507c59_add_contact_attempts_to_dialog_sessions.py  65bce8c2411d_create_knowledge_tables.py  7f3b2c9d1a01_contact_refusal_opt_out.py  8cd1e0d95b7a_create_tables.py  a8ffd1220905_add_last_delivery_error_to_leads.py  ee6e74045934_soft_delete_deleted_at_partial_unique_.py
static/: widget-demo.html  widget.js
tests/: conftest.py  test_main.py
(+32 files in other folders)
