[project]
name = "innova-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[openai]>=0.13.4",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.0.0",
    "pgvector>=0.4.2",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast, no external dependencies",
    "integration: requires running app",
    "e2e: end-to-end tests, requires PostgreSQL",
    "integration_redis: requires Redis",
    "integration_crm_fake: uses fake CRM adapter, no real tokens",
    "manual_smoke: requires real LLM_PROVIDER=ag2",
]
asyncio_mode = "auto"
